--- a/frontend/style.css
+++ b/frontend/style.css
@@ -54,6 +54,49 @@ left: 476px;
 margin-top: 50px;
 margin-bottom: 75px;
 }
+
+h2 {
+    position: absolute;
+width: 787px;
+height: 242px;
+left: calc(50% - 787px/2 - 21.5px);
+top: 150px;
+
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 700;
+font-size: 96px;
+line-height: 121px;
+display: flex;
+align-items: center;
+text-align: center;
+text-transform: capitalize;
+
+color: #479F85;
+}
+
+.font-list {
+position: absolute;
+width: 787px;
+height: 104px;
+left: 360px;
+top: 450px;
+
+background: rgba(34, 141, 116, 0.18);
+opacity: 0.2;
+border: 5px solid #228D6D;
+border-radius: 30px;
+}
+
+.langsign {
+    position: absolute;
+left: 80.62%;
+right: 12.15%;
+top: 62.83%;
+bottom: 28.44%;
+
+}
+
 /* .top_svg{
     width: 90%;
     margin-top: 50px;
@@ -65,3 +108,8 @@ margin-bottom: 75px;
     width: 90%;
     justify-content: space-between;
 } */
+
+.bg-select {
+    background-color: #228D6D !important;
+}
+
